option optimize_for = LITE_RUNTIME;

message TreasureRefiningRequest
{
 required uint32 pos = 1;
 required uint32 posZhengXing = 2;
}
